cmake_minimum_required(VERSION 3.18)
project(DuckLib LANGUAGES CXX)
add_subdirectory(raylib-cpp)
file(GLOB sources "src/*.cpp" "src/*.c")
add_executable(as9 ${sources})
target_link_libraries(as9 PUBLIC raylib raylib_cpp raylib::buffered)
set_property(TARGET as9 PROPERTY CXX_STANDARD 20)

configure_file(assets/textures/Enemy.png assets/textures/Enemy.png COPYONLY)
configure_file(assets/textures/Entrance.png assets/textures/Entrance.png COPYONLY)
configure_file(assets/textures/Exit.png assets/textures/Exit.png COPYONLY)
configure_file(assets/textures/Plank.png assets/textures/Plank.png COPYONLY)
configure_file(assets/textures/Player.png assets/textures/Player.png COPYONLY)
configure_file(assets/textures/Wallt.png assets/textures/Wallt.png COPYONLY)
configure_file(assets/textures/main_menu.jpg assets/textures/main_menu.jpg COPYONLY)